{
  "version": 4,
  "terraform_version": "1.6.5",
  "serial": 351,
  "lineage": "fdcb814a-8280-a998-5eaf-6b20e3b6cd25",
  "resources": [
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:loadbalancer/app/lbmain/0a7f956329455a76",
            "arn_suffix": "app/lbmain/0a7f956329455a76",
            "desync_mitigation_mode": "defensive",
            "dns_name": "lbmain-1411465520.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:loadbalancer/app/lbmain/0a7f956329455a76",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "lbmain",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05680801a21ba2ddf",
              "sg-0ae3c183c143388fc",
              "sg-0bdd5a0570d093169",
              "sg-0bf0b26e3351afb7a"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a79ec3beca784ca1"
              },
              {
                "subnet_id": "subnet-0ae59c36f95a4122e"
              },
              {
                "subnet_id": "subnet-0de3736de1c1471b9"
              }
            ],
            "subnets": [
              "subnet-0a79ec3beca784ca1",
              "subnet-0ae59c36f95a4122e",
              "subnet-0de3736de1c1471b9"
            ],
            "vpc_id": "vpc-0ede19573ab7304a0",
            "xff_header_processing_mode": "append",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "lb_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener/app/lbmain/0a7f956329455a76/c4a40611f195b110",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-status/fcf9d108869c504f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener/app/lbmain/0a7f956329455a76/c4a40611f195b110",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:loadbalancer/app/lbmain/0a7f956329455a76",
            "port": 3000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Name": "target-group-status"
            },
            "tags_all": {
              "Name": "target-group-status"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.lb_main",
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-lighting/f69a7bedf8298fb2",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener-rule/app/lbmain/0a7f956329455a76/c4a40611f195b110/0aa2fcdd0d3e066c",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/lights*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener-rule/app/lbmain/0a7f956329455a76/c4a40611f195b110/0aa2fcdd0d3e066c",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener/app/lbmain/0a7f956329455a76/c4a40611f195b110",
            "priority": 2,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.lb_main",
            "module.loadbalancer.aws_lb_listener.lb_listener",
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-heating/520802fa6971e1d0",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener-rule/app/lbmain/0a7f956329455a76/c4a40611f195b110/1873f83a7a54b8cb",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/heating*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener-rule/app/lbmain/0a7f956329455a76/c4a40611f195b110/1873f83a7a54b8cb",
            "listener_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:listener/app/lbmain/0a7f956329455a76/c4a40611f195b110",
            "priority": 1,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.lb_main",
            "module.loadbalancer.aws_lb_listener.lb_listener",
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-lighting/f69a7bedf8298fb2",
            "arn_suffix": "targetgroup/target-group-lighting/f69a7bedf8298fb2",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/lights",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-lighting/f69a7bedf8298fb2",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-lighting",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-lighting"
            },
            "tags_all": {
              "Name": "target-group-lighting"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-heating/520802fa6971e1d0",
            "arn_suffix": "targetgroup/target-group-heating/520802fa6971e1d0",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/heating",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-heating/520802fa6971e1d0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-heating",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-heating"
            },
            "tags_all": {
              "Name": "target-group-heating"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-status/fcf9d108869c504f",
            "arn_suffix": "targetgroup/target-group-status/fcf9d108869c504f",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/api/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-status/fcf9d108869c504f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "target-group-status",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-status"
            },
            "tags_all": {
              "Name": "target-group-status"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "target_group_servers_attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-lighting/f69a7bedf8298fb2-20231207101237863400000002",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-lighting/f69a7bedf8298fb2",
            "target_id": "i-0517adf9986188a36"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.servers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-heating/520802fa6971e1d0-20231207101237862400000001",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-heating/520802fa6971e1d0",
            "target_id": "i-0fd14fe02160775b7"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.servers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-status/fcf9d108869c504f-20231207101237864900000003",
            "port": 3000,
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:848305735412:targetgroup/target-group-status/fcf9d108869c504f",
            "target_id": "i-0abfdc228ef21f3de"
          },
          "dependencies": [
            "module.loadbalancer.aws_lb_target_group.target_group",
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.servers.aws_instance.servers",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:security-group/sg-0ae3c183c143388fc",
            "description": "allows ingress and egress traffic for HTTP requests from all external sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-0ae3c183c143388fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "848305735412",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:security-group/sg-0bf0b26e3351afb7a",
            "description": "allows ingress and egress traffic for HTTPS requests from all external sources",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0bf0b26e3351afb7a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "allow_https",
            "name_prefix": "",
            "owner_id": "848305735412",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:security-group/sg-0bdd5a0570d093169",
            "description": "allows ingress on port 3000 for lighting application",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "id": "sg-0bdd5a0570d093169",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "allow_port_3000",
            "name_prefix": "",
            "owner_id": "848305735412",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:security-group/sg-05680801a21ba2ddf",
            "description": "allows ingress ssh from own IP address",
            "egress": [],
            "id": "sg-05680801a21ba2ddf",
            "ingress": [
              {
                "cidr_blocks": [
                  "86.167.219.78/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "2a00:23c5:e81c:3b01:4d6b:93b5:f96e:9152/128"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_ssh",
            "name_prefix": "",
            "owner_id": "848305735412",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-4208246241",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ae3c183c143388fc",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-395705927",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bf0b26e3351afb7a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_https",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-2146399438",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bdd5a0570d093169",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_port_3000",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-1759489886",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0ae3c183c143388fc",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 443,
            "id": "sgrule-1468524736",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bf0b26e3351afb7a",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_https",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ingress_port_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 3000,
            "id": "sgrule-3280710094",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0bdd5a0570d093169",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 3000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_port_3000",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "86.167.219.78/32"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1985821424",
            "ipv6_cidr_blocks": [
              "2a00:23c5:e81c:3b01:4d6b:93b5:f96e:9152/128"
            ],
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-05680801a21ba2ddf",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.security.aws_security_group.allow_ssh",
            "module.security.data.http.myipv4address",
            "module.security.data.http.myipv6address",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.servers",
      "mode": "managed",
      "type": "aws_instance",
      "name": "servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e6ba473035021977",
            "arn": "arn:aws:ec2:eu-west-2:848305735412:instance/i-0517adf9986188a36",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0517adf9986188a36",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-smart-home",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b22af96c22c4f57c",
            "private_dns": "ip-10-0-2-251.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.251",
            "public_dns": "ec2-18-171-60-70.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.171.60.70",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c6b5b939dfc41559",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0de3736de1c1471b9",
            "tags": {
              "Name": "server_lighting"
            },
            "tags_all": {
              "Name": "server_lighting"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05680801a21ba2ddf",
              "sg-0ae3c183c143388fc",
              "sg-0bdd5a0570d093169",
              "sg-0bf0b26e3351afb7a"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-071bc604218b1e5d7",
            "arn": "arn:aws:ec2:eu-west-2:848305735412:instance/i-0fd14fe02160775b7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0fd14fe02160775b7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-smart-home",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08be6d48a35f12f33",
            "private_dns": "ip-10-0-4-120.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.4.120",
            "public_dns": "ec2-18-130-39-157.eu-west-2.compute.amazonaws.com",
            "public_ip": "18.130.39.157",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04d10e994e785d670",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a79ec3beca784ca1",
            "tags": {
              "Name": "server_heating"
            },
            "tags_all": {
              "Name": "server_heating"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05680801a21ba2ddf",
              "sg-0ae3c183c143388fc",
              "sg-0bdd5a0570d093169",
              "sg-0bf0b26e3351afb7a"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011f5b87edc3fad57",
            "arn": "arn:aws:ec2:eu-west-2:848305735412:instance/i-0abfdc228ef21f3de",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0abfdc228ef21f3de",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "project-smart-home",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0831e1c8bb82162bc",
            "private_dns": "ip-10-0-6-218.eu-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.6.218",
            "public_dns": "ec2-3-8-85-105.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.8.85.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8b5fd315cb142bf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae59c36f95a4122e",
            "tags": {
              "Name": "server_status"
            },
            "tags_all": {
              "Name": "server_status"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-05680801a21ba2ddf",
              "sg-0ae3c183c143388fc",
              "sg-0bdd5a0570d093169",
              "sg-0bf0b26e3351afb7a"
            ]
          },
          "dependencies": [
            "module.security.aws_security_group.allow_http",
            "module.security.aws_security_group.allow_https",
            "module.security.aws_security_group.allow_port_3000",
            "module.security.aws_security_group.allow_ssh",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:internet-gateway/igw-028bea6240a1607b4",
            "id": "igw-028bea6240a1607b4",
            "owner_id": "848305735412",
            "tags": {
              "Name": "igw_micro-services-vpc"
            },
            "tags_all": {
              "Name": "igw_micro-services-vpc"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-028bea6240a1607b4",
            "id": "r-rtb-0619a5d6360378bd11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0619a5d6360378bd1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:route-table/rtb-0619a5d6360378bd1",
            "id": "rtb-0619a5d6360378bd1",
            "owner_id": "848305735412",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-028bea6240a1607b4",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "micro-services-vpc-route-table"
            },
            "tags_all": {
              "Name": "micro-services-vpc-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab1718b925b49758",
            "route_table_id": "rtb-0619a5d6360378bd1",
            "subnet_id": "subnet-0de3736de1c1471b9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e93807276de75b45",
            "route_table_id": "rtb-0619a5d6360378bd1",
            "subnet_id": "subnet-0a79ec3beca784ca1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01ad1d70a4ba57387",
            "route_table_id": "rtb-0619a5d6360378bd1",
            "subnet_id": "subnet-0ae59c36f95a4122e"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-0ca21c3a63d6ee0d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ca21c3a63d6ee0d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-private-eu-west-2a"
            },
            "tags_all": {
              "Name": "micro-services-vpc-private-eu-west-2a"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-070a5a7154d482e06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070a5a7154d482e06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-private-eu-west-2b"
            },
            "tags_all": {
              "Name": "micro-services-vpc-private-eu-west-2b"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-0e914325739307240",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e914325739307240",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-private-eu-west-2c"
            },
            "tags_all": {
              "Name": "micro-services-vpc-private-eu-west-2c"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-0de3736de1c1471b9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0de3736de1c1471b9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-public-eu-west-2a"
            },
            "tags_all": {
              "Name": "micro-services-vpc-public-eu-west-2a"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-0a79ec3beca784ca1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a79ec3beca784ca1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-public-eu-west-2b"
            },
            "tags_all": {
              "Name": "micro-services-vpc-public-eu-west-2b"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:subnet/subnet-0ae59c36f95a4122e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae59c36f95a4122e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "848305735412",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "micro-services-vpc-public-eu-west-2c"
            },
            "tags_all": {
              "Name": "micro-services-vpc-public-eu-west-2c"
            },
            "vpc_id": "vpc-0ede19573ab7304a0"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:848305735412:vpc/vpc-0ede19573ab7304a0",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-02605b6da905a7d29",
            "default_route_table_id": "rtb-0b38d3e4f56ddfecf",
            "default_security_group_id": "sg-024bef49dd8616e1d",
            "dhcp_options_id": "dopt-0dab83f03cdb6f4b2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ede19573ab7304a0",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b38d3e4f56ddfecf",
            "owner_id": "848305735412",
            "tags": {
              "Name": "micro-services-vpc"
            },
            "tags_all": {
              "Name": "micro-services-vpc"
            }
          }
        }
      ]
    }
  ]
}